SERVER-64319 Fix the name hiding issue for usages of ShardingCatalogManager::withTransaction